tests/baselines/reference/symbolType15.errors.txt
tests/cases/conformance/es6/Symbols/symbolType15.ts(4,1): error TS2322: Type 'symbol' is not assignable to type 'Symbol'.
  'symbol' is a primitive, but 'Symbol' is a wrapper object. Prefer using 'symbol' when possible.
tests/cases/conformance/es6/Symbols/symbolType15.ts(5,1): error TS2322: Type 'Symbol' is not assignable to type 'symbol'.
  'symbol' is a primitive, but 'Symbol' is a wrapper object. Prefer using 'symbol' when possible.


==== tests/cases/conformance/es6/Symbols/symbolType15.ts (2 errors) ====
    var sym: symbol;
    var symObj: Symbol;
    
    symObj = sym;
    ~~~~~~
!!! error TS2322: Type 'symbol' is not assignable to type 'Symbol'.
!!! error TS2322:   'symbol' is a primitive, but 'Symbol' is a wrapper object. Prefer using 'symbol' when possible.
    sym = symObj;
    ~~~
!!! error TS2322: Type 'Symbol' is not assignable to type 'symbol'.
!!! error TS2322:   'symbol' is a primitive, but 'Symbol' is a wrapper object. Prefer using 'symbol' when possible.